--- a/glamyze/requirements.txt
+++ b/glamyze/requirements.txt
@@ -1,6 +1,16 @@
 asgiref==3.8.1
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+cryptography==43.0.3
 Django==5.1.2
 django-allauth==65.1.0
 django-environ==0.11.2
+idna==3.10
+pillow==11.0.0
 psycopg2==2.9.10
+pycparser==2.22
+PyJWT==2.9.0
+requests==2.32.3
 sqlparse==0.5.1
+urllib3==2.2.3
