--- a/glamyze/requirements.txt
+++ b/glamyze/requirements.txt
@@ -1,16 +1,35 @@
 asgiref==3.8.1
+Brotli==1.1.0
 certifi==2024.8.30
 cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.4.0
 cryptography==43.0.3
+cssselect2==0.7.0
 Django==5.1.2
 django-allauth==65.1.0
 django-environ==0.11.2
+django-paypal==2.1
+fonttools==4.55.0
 idna==3.10
-pillow==11.0.0
+paypalrestsdk==1.13.3
+pillow==10.4.0
 psycopg2==2.9.10
 pycparser==2.22
+pydyf==0.11.0
 PyJWT==2.9.0
+pyOpenSSL==24.2.1
+pyphen==0.15.0
+pytz==2024.2
+razorpay==1.4.2
+reportlab==4.2.5
 requests==2.32.3
+setuptools==75.6.0
+six==1.16.0
 sqlparse==0.5.1
+tinycss2==1.4.0
+tinyhtml5==2.0.0
 urllib3==2.2.3
+weasyprint==63.0
+webencodings==0.5.1
+zopfli==0.2.3.post1
